--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title><h3>test page</h3></title>
   </head>
   <body>
-    test page
+    <div>
+      <h1><b>모바일 청첩장 만들기 도전</b></h1>
+    </div>
+    <div>
+      <h2>TBD</h2>
+    </div>
   </body>
 </html>
